# forma

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
crates/forma-ir/: CHANGELOG.md  Cargo.toml  README.md
crates/forma-ir/src/: dump.rs  format.rs  lib.rs  parser.rs  slot.rs  walker.rs
crates/forma-server/: CHANGELOG.md  Cargo.toml  README.md
crates/forma-server/src/: assets.rs  csp.rs  ir_compat.rs  lib.rs  sw.rs  template.rs  types.rs
