[package]
name = "forma-ir"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Forma <victor@getforma.dev>"]
description = "Forma Module IR: binary format, parser, walker, and WASM exports"
repository = "https://github.com/getforma-dev/forma"
homepage = "https://getforma.dev"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/forma-ir"
keywords = ["ssr", "binary-ir", "wasm", "web-framework", "forma"]
categories = ["web-programming", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
serde_json = "1"
tracing = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["tracing", "dump"]
wasm = ["wasm-bindgen"]
dump = []

[lib]
crate-type = ["rlib"]
