[package]
name = "forma-server"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Forma <victor@getforma.dev>"]
description = "Axum middleware for Forma SSR: page rendering, asset serving, CSP, service worker"
repository = "https://github.com/getforma-dev/forma"
homepage = "https://getforma.dev"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/forma-server"
keywords = ["ssr", "axum", "web-framework", "islands", "forma"]
categories = ["web-programming::http-server"]

[dependencies]
forma-ir = "0.1.4"
axum = "0.8"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ring = "0.17"
tracing = "0.1"
